@@ -4,7 +4,7 @@ C-Name: bnfsunit
 Prototype: GGp
 Help: bnfsunit(bnf,S): compute the fundamental S-units of the number field
  bnf output by bnfinit, S being a list of prime ideals. res[1] contains the
- S-units, res[5] the S-classgroup. See manual for details.
+ S-units, res[5] the S-classgroup.
 Doc: computes the fundamental $S$-units of the
  number field $\var{bnf}$ (output by \kbd{bnfinit}), where $S$ is a list of
  prime ideals (output by \kbd{idealprimedec}). The output is a vector $v$ with
