@@ -12,7 +12,7 @@
 [26, [26], [[3, 0, 2, 2; 0, 3, 2, 1; 0, 0, 1, 0; 0, 0, 0, 1]]]
 [1, [], []]
 [3, 3]
-[2, Mod(0, 2)]~
+[2, 0]~
 388
 
 [2 0]
@@ -84,10 +84,10 @@ Mat([0, 0, 0, -2, 0]), 2]]], [[0]~, Mat(1)]]], [[2], Vecsmall([1]), Mat(1/2)
 6]), Vecsmall([1])], 0, 0, 0]]]
 1
 [[4]~, [33/343, 2/2401]~]
-[0, 2, Mod(0, 2)]~
+[0, 2, 0]~
 [728, 2]
 []
 []
 [2]
 []
-Total time spent: 14324
+Total time spent: 25927
