@@ -1,14 +1,25 @@
 [x, x + 1, -x^2 - 1, x^2 - 2*x - 1, 7]
 5.1716650998879371140383798588705766078
 [1, [], []]
-[0, Mod(0, 2), 1, 0, 0, 0, 0]~
-[0, Mod(1, 2), 1, 0, 1, 0, 0]~
+[0, 0, 1, 0, 0, 0, 0]~
+[0, 1, 1, 0, 1, 0, 0]~
 []~
-[0, Mod(0, 2), 37, 0, 20, 0, 0]~
+[0, 0, 37, 0, 20, 0, 0]~
 []~
+[[Mat([x - 1, 1]), Mat([-1, 1])], [], Vecsmall([]), [;], 1]
 []~
-[0, Mod(1, 2)]~
-[1, Mod(0, 2)]~
+[[Mat([[0, 1, 0]~, 1]), Mat([[1, 1, 0]~, 1]), Mat([[-1, 0, -1]~, 1]), Mat([[
+-1, -2, 1]~, 1]), Mat([[7, 0, 0]~, 1]), Mat([x - 1, 1]), Mat([-1, 1])], [[2,
+ [0, 1, 0]~, 3, 1, [0, 2, 0; 0, 0, 2; 1, 0, 0]], [3, [1, 1, 0]~, 3, 1, [1, 2
+, -2; -1, 1, 2; 1, -1, 1]], [5, [2, 1, 0]~, 1, 1, [-1, 2, -4; -2, -1, 2; 1, 
+-2, -1]], [5, [-1, -2, 1]~, 1, 2, [2, 0, 2; 1, 2, 0; 0, 1, 2]], [7, [7, 0, 0
+]~, 1, 3, 1]]~, Vecsmall([1, 2, 3, 4, 5]), matrix(0,5), 1]
+[1, 0, 1, 0, 0, 0, 1]~
+[]~
+[37, 0, 20, 0, 0, 0, 0]~
+[]~
+[0, 1]~
+[1, 0]~
 [-1/2*x - 3/2]
 0.69314718055994530941723212145817656807
 [1, [], []]
