@@ -2104,9 +2104,10 @@ A function with that name existed in GP-1.39.15. Please update your script.
 
 New syntax: isunit(bnf,x) ===> bnfisunit(bnf,x)
 
-bnfisunit(bnf,x): bnf being output by bnfinit, gives the column vector of 
+bnfisunit(bnf,x, {U}): bnf being output by bnfinit, gives the column vector of 
 exponents of x on the fundamental units and the roots of unity if x is a unit, 
-the empty vector otherwise.
+the empty vector otherwise. If U is present, as given by bnfunits, decompose x 
+on the attached S-units generators.
 
 
   ***   at top-level: jacobi()
@@ -4521,4 +4522,4 @@ New syntax: texprint(x) ===> printtex(x)
 printtex({str}*): outputs its string arguments in TeX format.
 
 
-Total time spent: 7
+Total time spent: 10
