@@ -178,7 +178,7 @@ x^7 - 2575481228604156570*x^6 + 2756771576006241774*x^5 - 289772792762362859
 ? bnfisprincipal(bnf,[5,1;0,1])
 [[1]~, [-2, -1/3]~]
 ? bnfisunit(bnf,Mod(3405*x-27466,x^2-x-57))
-[-4, Mod(1, 2)]~
+[-4, 1]~
 ? bnfnarrow(bnf)
 [3, [3], [[3, 2; 0, 1]]]
 ? bnfsignunit(bnf)
@@ -712,4 +712,4 @@ x^15 - 15*x^11 + 75*x^7 - x^5 - 125*x^3 + 5*x + 1
 0745514]
 ? if(getheap()!=HEAP,getheap())
 ? print("Total time spent: ",gettime);
-Total time spent: 44
+Total time spent: 68
