@@ -1,4 +1,4 @@
-HEAP=[164, if(sizebyte(0)==16,93723,95160)];
+HEAP=[164, if(sizebyte(0)==16,93717,95154)];
 default(realprecision,154); Pi; default(realprecision,38);
 dobnf(T,flag=0,tech=[])= setrand(1); my(K = bnfinit(T,flag,tech)); [K.cyc,K.fu];
 \e
